--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <p>Pierwszy paragraf dokumentu</p>
+    <p class="alfa-ver">
+        Drugi paragraf projektu - na gałęzi alfa-version
+    </p>
+    <p>Trzeci paragraf na gałęzi master</p>
 </body>
 </html>
