--- a/vue/app-offer-list/index.html
+++ b/vue/app-offer-list/index.html
@@ -27,6 +27,20 @@
             pointer-events: auto;
             opacity: 1;
         }
+        
+        #offers {
+            width: 60%;
+            margin: 0 auto;
+        }
+
+        .offer {
+            padding: 2rem;
+        }
+
+        .offer:nth-child(2n) {
+            background: #f0fdfd;
+        }
+
     </style>
 </head>
 <body>
