--- a/vue/app-offer-list/index.html
+++ b/vue/app-offer-list/index.html
@@ -88,7 +88,7 @@
                 },
                 get : function() {
                     let http = new XMLHttpRequest();
-                    http.open("GET", "http://leguralnie.pl/json/ogloszenia-json.json");
+                    http.open("GET", "ogloszenia.json");
                     http.addEventListener("load",() => {
                         if( http.status == 200 ) {
                             this.offers = http.response;
