Dodanie slidera na podstronie Zespol

--- a/projekty/bright-light/index.html
+++ b/projekty/bright-light/index.html
@@ -390,6 +390,9 @@
                                    </svg>
                             </a>
                         </div>
+                        <figure class="contact__decor">
+                            <img src="images/k6.png" alt="">
+                        </figure>
                     </div>
                 </div>
 
