--- a/js/js-promise/promise-all.html
+++ b/js/js-promise/promise-all.html
@@ -25,6 +25,10 @@
 
     } );
 
+    promise.then((data) => {
+      console.log(data);
+    });
+
     const time = () => {
       return new Promise( ( resolve, reject ) => {
         setTimeout( () => {
@@ -32,6 +36,10 @@
         },1000 );
       } );
     }
+
+    time().then(() => {
+      console.log("A Success");
+    })
 
     const action = (data) => {
       console.log(data);
