Change Metro Project

--- a/projekty/metro/index.html
+++ b/projekty/metro/index.html
@@ -11,19 +11,49 @@
 </head>
 <body>
   
+
+  <!-- header -->
   <header class="x-home x-home--slider">
+
+    <!-- slider -->
     <section class="x-slider">
-      <div class="x-slider__item">
+      <div class="x-slider__item" data-title-slide="1">
         <img src="images/slide-1.png" alt="">
       </div>
-      <div class="x-slider__item">
+      <div class="x-slider__item" data-title-slide="2">
         <img src="images/slide-2.jpg" alt="">
       </div>
-      <div class="x-slider__item">
+      <div class="x-slider__item" data-title-slide="3">
         <img src="images/slide-3.jpg" alt="">
       </div>
     </section>
+    <!-- slider end -->    
 
+    <!-- slider title -->
+    <div class="x-slider__title" data-title="1">
+      <h2>
+        <span>Innowacyjne produkty</span> dla <br>najbardziej wymagających.
+      </h2>
+      <p>Vestibulum congue ac nunc vel volutpat. <br>Aenean a accumsan sapien.</p>
+      <a href="#" class="x-link x-link--events-stop">Sprawdż</a>
+    </div>
+    <div class="x-slider__title" data-title="2">
+      <h2>
+        <span>Innowacyjne produkty</span> dla <br>najbardziej wymagających.
+      </h2>
+      <p>Vestibulum congue ac nunc vel volutpat. <br>Aenean a accumsan sapien.</p>
+      <a href="#" class="x-link x-link--events-stop">Sprawdż</a>
+    </div>
+    <div class="x-slider__title" data-title="3">
+      <h2>
+        <span>Innowacyjne produkty</span> dla <br>najbardziej wymagających.
+      </h2>
+      <p>Vestibulum congue ac nunc vel volutpat. <br>Aenean a accumsan sapien.</p>
+      <a href="#" class="x-link x-link--events-stop">Sprawdż</a>
+    </div>
+    <!-- slider title end -->
+
+    <!-- col grid slider -->
     <div class="x-slider__grid">
       <div class="x-slider__col">
         <div class="x-slider__rect"></div>
@@ -65,8 +95,11 @@
       <div class="x-slider__col">
       </div>
     </div>
+    <!-- col grid slider end -->    
     
   </header>
+  <!-- header end -->
+  
 
   <script src="js/jq.js"></script>
   <script src="js/slick.min.js"></script>
