--- a/gitstart/index.html
+++ b/gitstart/index.html
@@ -10,7 +10,6 @@
    <p>Git podstawy pracy z GitHub Pages</p>
    <p>Drugi akapit na masterze</p>
    <h2>Alfa-version nagłówek drugiego poziomu</h2>
+   Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eaque ea fuga minus esse non labore?
 </body>
-
-dnudbiubi 
 </html>
