--- a/css/1-selektory-podstawowe/index.html
+++ b/css/1-selektory-podstawowe/index.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Document</title>
+   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
    
@@ -25,9 +26,9 @@
    </div>
 
    <ul>
-      <li class="active"><a href="#">Link 1</a></li>
+      <li><a href="#">Link 1</a></li>
       <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
+      <li class="active"><a href="#">Link 3</a></li>
       <li><a href="#">Link 4</a></li>
    </ul>
 
